--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         Revolutionizing accounts receivable collections by turning open invoices into secure pay-by-link emails—automatically.
       </p>
       <nav class="nav">
-        <a href="/terms.html">Terms</a>
-        <a href="/privacy.html">Privacy</a>
+        <a href="/terms">Terms</a>
+        <a href="/privacy">Privacy</a>
       </nav>
     </header>
 
