--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <p class="tagline">
         Revolutionizing accounts receivable collections by turning open invoices into secure pay-by-link emails—automatically.
       </p>
-      <nav class="nav">
-        <a href="/terms">Terms</a>
-        <a href="/privacy">Privacy</a>
-      </nav>
+        <nav class="nav">
+            <a href="/terms/">Terms</a>
+            <a href="/privacy/">Privacy</a>
+        </nav>
     </header>
 
     <section class="card">
