--- a/terms/index.html
+++ b/terms/index.html
@@ -12,7 +12,7 @@
       <h1>Terms of Service</h1>
       <nav class="nav">
         <a href="/">Home</a>
-        <a href="/privacy.html">Privacy</a>
+        <a href="/index.html">Privacy</a>
       </nav>
     </header>
 
