--- a/privacy/index.html
+++ b/privacy/index.html
@@ -12,7 +12,7 @@
       <h1>Privacy Policy</h1>
       <nav class="nav">
         <a href="/">Home</a>
-        <a href="/terms.html">Terms</a>
+        <a href="/index.html">Terms</a>
       </nav>
     </header>
 
