--- a/index.html
+++ b/index.html
@@ -4,33 +4,82 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>PR Collects</title>
+  <meta name="description" content="PR Collects helps brands collect AR faster by emailing secure pay-by-link invoices and tracking payment status end-to-end." />
   <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
-  <main class="wrap">
-    <header class="card">
-      <h1>PR Collects</h1>
-      <p class="tagline">
-        Revolutionizing accounts receivable collections by turning open invoices into secure pay-by-link emails—automatically.
-      </p>
-        <nav class="nav">
-            <a href="/terms/">Terms</a>
-            <a href="/privacy/">Privacy</a>
-        </nav>
+  <div class="container">
+    <header class="topbar">
+      <div class="brand">
+        <div class="brand-mark" aria-hidden="true"></div>
+        <div class="brand-title">
+          <strong>PR Collects</strong>
+          <span>AR collections • pay-by-link • reconciliation</span>
+        </div>
+      </div>
+      <nav class="nav">
+        <a class="active" href="/">Home</a>
+        <a href="/terms/">Terms</a>
+        <a href="/privacy/">Privacy</a>
+      </nav>
     </header>
 
-    <section class="card">
-      <h2>What we do</h2>
+    <section class="card hero">
+      <h1>Revolutionizing AR Collections</h1>
       <p>
-        PR Collects helps brands get paid faster with fewer follow-ups by automating payment-link delivery and payment status tracking.
+        PR Collects turns open invoices into secure pay-by-link emails—automatically—so you get paid faster with fewer follow-ups.
       </p>
-      <p class="muted">Support: <a href="mailto:support@prcollects.com">support@prcollects.com</a></p>
+
+      <div class="badges" aria-label="Highlights">
+        <span class="badge"><b>Microsoft 365</b> Graph email sending</span>
+        <span class="badge"><b>Pay-by-link</b> hosted checkout</span>
+        <span class="badge"><b>ERP-ready</b> webhook reconciliation</span>
+      </div>
+
+      <div class="steps">
+        <div class="step">
+          <h3>1) Detect overdue items</h3>
+          <p>Read open AR items from your ERP/SQL and pick what needs action.</p>
+        </div>
+        <div class="step">
+          <h3>2) Send a payment link</h3>
+          <p>Email customers a secure hosted payment page with a fixed amount.</p>
+        </div>
+        <div class="step">
+          <h3>3) Reconcile automatically</h3>
+          <p>Use provider webhooks to mark invoices paid and update AR.</p>
+        </div>
+      </div>
+
+      <div class="cta">
+        <div>
+          <div style="font-weight:700">Want a demo?</div>
+          <small>We’ll start with one tenant + sandbox payments.</small>
+        </div>
+        <a class="btn" href="mailto:support@prcollects.com">Contact support</a>
+      </div>
     </section>
 
+    <div class="grid">
+      <section class="card">
+        <h2 style="margin:0 0 8px;">What we do</h2>
+        <p style="margin:0;color:var(--muted2);">
+          PR Collects helps brands get paid faster by automating payment-link delivery and tracking payment status—designed for real AR workflows and real accounting needs.
+        </p>
+      </section>
+
+      <section class="card">
+        <h2 style="margin:0 0 8px;">Security</h2>
+        <p style="margin:0;color:var(--muted2);">
+          No mailbox passwords shared (Graph OAuth). Payments happen inside the payment provider’s hosted checkout.
+        </p>
+      </section>
+    </div>
+
     <footer class="footer">
-      © <span id="y"></span> PR Collects
+      © <span id="y"></span> PR Collects • <a href="/privacy/">Privacy</a> • <a href="/terms/">Terms</a>
     </footer>
-  </main>
+  </div>
 
   <script>document.getElementById("y").textContent = new Date().getFullYear();</script>
 </body>
