--- a/privacy/index.html
+++ b/privacy/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="color-scheme" content="light" />
   <title>Privacy • PR Collects</title>
   <link rel="stylesheet" href="/style.css" />
 </head>
@@ -16,10 +17,10 @@
           <span>Privacy Policy</span>
         </div>
       </div>
-      <nav class="nav">
+      <nav class="nav" aria-label="Primary">
         <a href="/">Home</a>
         <a href="/terms/">Terms</a>
-        <a class="active" href="/privacy/">Privacy</a>
+        <a class="active" aria-current="page" href="/privacy/">Privacy</a>
       </nav>
     </header>
 
